--- a/Haarish ToDo Zuper/Haarish ToDo Zuper/Base.lproj/Main.storyboard
+++ b/Haarish ToDo Zuper/Haarish ToDo Zuper/Base.lproj/Main.storyboard
@@ -86,14 +86,14 @@
                                                             </constraints>
                                                         </view>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tag" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="osv-k9-Oyp">
-                                                            <rect key="frame" x="60" y="45.5" width="27.5" height="92.5"/>
+                                                            <rect key="frame" x="60" y="123.5" width="20.5" height="14.5"/>
                                                             <color key="backgroundColor" systemColor="systemTealColor"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Todo content" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ebp-9n-kp0">
-                                                            <rect key="frame" x="60" y="15" width="296" height="20.5"/>
+                                                            <rect key="frame" x="60" y="15" width="291" height="20.5"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="20.5" id="KiR-Dm-frH"/>
                                                             </constraints>
@@ -102,7 +102,7 @@
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kYq-3g-mue">
-                                                            <rect key="frame" x="376" y="61.5" width="25" height="25"/>
+                                                            <rect key="frame" x="371" y="61.5" width="25" height="25"/>
                                                             <subviews>
                                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Tick" translatesAutoresizingMaskIntoConstraints="NO" id="Zr7-4t-0S9">
                                                                     <rect key="frame" x="0.0" y="0.0" width="25" height="25"/>
@@ -125,12 +125,12 @@
                                                         <constraint firstItem="Ebp-9n-kp0" firstAttribute="leading" secondItem="ayH-2p-abe" secondAttribute="trailing" constant="20" id="9qh-cg-rJi"/>
                                                         <constraint firstItem="Ebp-9n-kp0" firstAttribute="top" secondItem="Hp5-7Y-LhE" secondAttribute="top" constant="15" id="AW9-Cp-6jE"/>
                                                         <constraint firstAttribute="bottom" secondItem="osv-k9-Oyp" secondAttribute="bottom" constant="10" id="ZhI-y0-cIg"/>
-                                                        <constraint firstItem="osv-k9-Oyp" firstAttribute="top" secondItem="Ebp-9n-kp0" secondAttribute="bottom" constant="10" id="afA-cb-Pcl"/>
+                                                        <constraint firstItem="osv-k9-Oyp" firstAttribute="top" relation="greaterThanOrEqual" secondItem="Ebp-9n-kp0" secondAttribute="bottom" constant="10" id="afA-cb-Pcl"/>
                                                         <constraint firstItem="ayH-2p-abe" firstAttribute="centerY" secondItem="Hp5-7Y-LhE" secondAttribute="centerY" id="gHl-Ww-cc9"/>
                                                         <constraint firstItem="Zr7-4t-0S9" firstAttribute="leading" secondItem="Ebp-9n-kp0" secondAttribute="trailing" constant="20" id="kFB-Jj-q2M"/>
                                                         <constraint firstItem="ayH-2p-abe" firstAttribute="leading" secondItem="Hp5-7Y-LhE" secondAttribute="leading" constant="20" id="l51-1y-cBf"/>
                                                         <constraint firstItem="kYq-3g-mue" firstAttribute="centerY" secondItem="Hp5-7Y-LhE" secondAttribute="centerY" id="nPF-YX-E4k"/>
-                                                        <constraint firstAttribute="trailing" secondItem="kYq-3g-mue" secondAttribute="trailing" constant="10" id="oZY-OH-tZB"/>
+                                                        <constraint firstAttribute="trailing" secondItem="kYq-3g-mue" secondAttribute="trailing" constant="15" id="oZY-OH-tZB"/>
                                                         <constraint firstItem="osv-k9-Oyp" firstAttribute="leading" secondItem="Ebp-9n-kp0" secondAttribute="leading" id="ur8-he-8W5"/>
                                                     </constraints>
                                                 </view>
@@ -196,7 +196,6 @@
         <!--Item-->
         <scene sceneID="3Hz-GY-AUp">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="bcL-uR-IBf" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <navigationController id="3x5-Xg-ty6" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Item" id="zXF-nk-m4j"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="maB-wG-b8p">
@@ -207,6 +206,7 @@
                         <segue destination="BG5-i2-NKd" kind="relationship" relationship="rootViewController" id="4bc-sn-EAl"/>
                     </connections>
                 </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bcL-uR-IBf" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="925" y="498"/>
         </scene>
