--- a/Haarish ToDo Zuper/Haarish ToDo Zuper/Base.lproj/Main.storyboard
+++ b/Haarish ToDo Zuper/Haarish ToDo Zuper/Base.lproj/Main.storyboard
@@ -27,11 +27,11 @@
             </objects>
             <point key="canvasLocation" x="423" y="-191"/>
         </scene>
-        <!--Item-->
+        <!--Todo-->
         <scene sceneID="YiL-mt-fDf">
             <objects>
                 <navigationController id="HWz-je-zRR" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="ehu-23-y3e"/>
+                    <tabBarItem key="tabBarItem" title="Todo" image="text.badge.checkmark.rtl" catalog="system" id="ehu-23-y3e"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="kxZ-mz-ith">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -184,20 +184,56 @@
                     <view key="view" contentMode="scaleToFill" id="7uO-Ne-9Xg">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="tL8-Qp-CnX">
+                                <rect key="frame" x="0.0" y="88" width="414" height="51"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="idR-gs-3CG">
+                                <rect key="frame" x="0.0" y="139" width="414" height="674"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="2wh-2F-cS0">
+                                    <size key="itemSize" width="413" height="141"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="Sgr-fr-rNb">
+                                        <rect key="frame" x="0.5" y="0.0" width="413" height="141"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="iap-TW-8jw">
+                                            <rect key="frame" x="0.0" y="0.0" width="413" height="141"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </collectionViewCellContentView>
+                                        <size key="customSize" width="413" height="141"/>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="9et-Vo-My1"/>
-                        <color key="backgroundColor" systemColor="systemBrownColor"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="idR-gs-3CG" firstAttribute="leading" secondItem="9et-Vo-My1" secondAttribute="leading" id="4Lg-kI-cGv"/>
+                            <constraint firstItem="9et-Vo-My1" firstAttribute="bottom" secondItem="idR-gs-3CG" secondAttribute="bottom" id="8dm-rK-U7s"/>
+                            <constraint firstItem="tL8-Qp-CnX" firstAttribute="top" secondItem="9et-Vo-My1" secondAttribute="top" id="Hx8-fA-fqi"/>
+                            <constraint firstItem="9et-Vo-My1" firstAttribute="trailing" secondItem="idR-gs-3CG" secondAttribute="trailing" id="TtX-5a-kil"/>
+                            <constraint firstItem="tL8-Qp-CnX" firstAttribute="trailing" secondItem="9et-Vo-My1" secondAttribute="trailing" id="gzS-6q-xO8"/>
+                            <constraint firstItem="tL8-Qp-CnX" firstAttribute="leading" secondItem="9et-Vo-My1" secondAttribute="leading" id="l2m-Wj-fVk"/>
+                            <constraint firstItem="idR-gs-3CG" firstAttribute="top" secondItem="tL8-Qp-CnX" secondAttribute="bottom" id="yIc-tK-e0G"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="D5I-AT-Vd3"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5OO-aR-IBM" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="919" y="1150"/>
+            <point key="canvasLocation" x="918.84057971014499" y="1149.7767857142856"/>
         </scene>
-        <!--Item-->
+        <!--Tags-->
         <scene sceneID="3Hz-GY-AUp">
             <objects>
                 <navigationController id="3x5-Xg-ty6" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="zXF-nk-m4j"/>
+                    <tabBarItem key="tabBarItem" title="Tags" image="tag" catalog="system" id="zXF-nk-m4j"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="maB-wG-b8p">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -213,11 +249,10 @@
     </scenes>
     <resources>
         <image name="Tick" width="50" height="50"/>
+        <image name="tag" catalog="system" width="128" height="119"/>
+        <image name="text.badge.checkmark.rtl" catalog="system" width="128" height="109"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemBrownColor">
-            <color red="0.63529411764705879" green="0.51764705882352946" blue="0.36862745098039218" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemGray6Color">
             <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
