--- a/Haarish ToDo Zuper/Haarish ToDo Zuper/Base.lproj/Main.storyboard
+++ b/Haarish ToDo Zuper/Haarish ToDo Zuper/Base.lproj/Main.storyboard
@@ -187,6 +187,7 @@
                         <subviews>
                             <searchBar contentMode="redraw" placeholder="Search by tags" translatesAutoresizingMaskIntoConstraints="NO" id="tL8-Qp-CnX">
                                 <rect key="frame" x="0.0" y="88" width="414" height="51"/>
+                                <color key="backgroundColor" systemColor="systemGray6Color"/>
                                 <textInputTraits key="textInputTraits"/>
                             </searchBar>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="idR-gs-3CG">
